mobile home spacing fix 4

--- a/css/style.css
+++ b/css/style.css
@@ -399,7 +399,7 @@ section.home {
 
     section.home {
         flex-direction: row;
-        margin-top: 160px;
+        margin-top: 100px;
     }
 
     .toggle {
